2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonChromeTest.cs: Expanded Measure test.
	
2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonChromeTest.cs: Expanded Measure test.