@@ -1,3 +1,7 @@
+2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* ProgressBarBrushConverterTest.cs: Added.
+
 2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* ButtonChromeTest.cs: Expanded Measure test.
